Enhance NowsInstaller with GUI support and update documentation for CLI/UI installers